Closed
Bug 1314299
Opened 9 years ago
Closed 9 years ago
Add assertions to ConstraintTypeSet data structures
Categories
(Core :: JavaScript: GC, defect)
Core
JavaScript: GC
Tracking
()
RESOLVED
FIXED
mozilla52
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | fixed |
People
(Reporter: jonco, Assigned: jonco)
References
Details
Attachments
(1 file)
|
11.47 KB,
patch
|
jandem
:
review+
|
Details | Diff | Splinter Review |
To help track down bug 1220385 and following on from bug 1294767, I'd like to add some assertions to ConstraintTypeSet.
| Assignee | ||
Comment 1•9 years ago
|
||
Here's a patch to add assert to ConstriantTypeSet to check for compartment mismatches when adding constraints and to check that the constraints are allocated in the correct lifo pools when sweeping. Try seems green with this applied.
Attachment #8806366 -
Flags: review?(jdemooij)
Comment 2•9 years ago
|
||
Comment on attachment 8806366 [details] [diff] [review]
bug1314299-constraint-asserts
Review of attachment 8806366 [details] [diff] [review]:
-----------------------------------------------------------------
Nice!
Attachment #8806366 -
Flags: review?(jdemooij) → review+
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/7aa1f0540760
Add assertions to ConstraintTypeSet data structures r=jandem
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•