Bug 1314299 - Add assertions to ConstraintTypeSet data structures r=jandem